$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-23 (opened August 11, 2009)

	* poolaccum: new function to find the extrapolated richness
	values (or specpool() estimates) for random accumulation of
	sites (with summary and plot methods). Arguments (indices) still
	need consistent naming.
	
Version 1.16-22 (closed August 11, 2009)

	* metaMDS: accepts now user supplied dissimilarities either as a
	"dist" structure or as symmetric square matrix (Susan Letcher's
	wish). As a side effect, dissimilarity matrices are now correctly
	detected and will not be wrongly treated as raw data.

	* summary.cca: fix in 1.16-20 failed if all variables were
	continuous and there were no centroids of factor levels.
	
	* indpower: new function to calculate indicator power for a
	species (Halme et al. 2009, Cons. Biol. 23: 1008-1016)

	* mantel.correlog, print.mantel.correlog & plot.mantel.correlog: 
	new functions to construct multivariate mantel correlograms --- 
	use in ecology: to describe the spatial structure of species
	assemblages. See Legendre and Legendre, Numerical ecology; 1998,
	section 13.1.5. Written by Pierre Legendre.

Version 1.16-21 (opened July 4, 2009)

	* capscale: has now 'fitted' method (and hence, 'residuals'), and
	'predict' works with 'type = "response"'. These give
	dissimilarities that produce same ordination as original data, or
	their low-rank approximations. Function 'fitted' has 'model =
	"Imaginary"' that returns correction distances of complex
	eigenvectors with negative eigenvalues.  The dissimilarities are
	not additive, and the "Imaginary" component is not used in
	estimating the unconstrained component.

	* capscale: really works now either with argument 'dfun' or
	'metaMDSdist' (but not with both!).

	* wcmdscale: returns negative eigevalues scaled by
	sqrt(abs(eigenvalues)) if 'k' is not given or 'k' would include
	any negative eigenvalue.

Version 1.16-20 (closed July 4, 2009)
