@@ -1,5 +1,5 @@
 "specpool2vect" <-
-function(X, index = c("Jack.1","Jack.2", "Chao", "Boot", "Species"))
+function(X, index = c("jack1","jack2", "chao", "boot", "Species"))
 {
     pool <- attr(X, "pool")
     index <- match.arg(index)
